[package]
name = "application"
description = "a powerful live server by Rust ."
version = "0.0.1"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "video", "streaming"]
edition = "2018"
[dependencies]
toml = "0.5.8"
serde_derive = "1.0"
serde = { version = "1.0.101", optional = true, features = ["derive"] }
rtmp = {path = "../protocol/rtmp/"}#"0.0.4"
httpflv = {path = "../protocol/httpflv/"}
hls = {path = "../protocol/hls/"}
anyhow = "^1.0"

[features]
default = ["std"]
std = [ "serde" ]

# [dependencies.tokio]
# version = "0.2.21"
# default-features = false
# features = ["rt-core", "stream", "sync", "time", "tcp","rt-threaded", "macros"]

[dependencies.tokio]
version = "1.4.0"
default-features = false
#features = ["rt-core", "rt-threaded", "macros", "time","sync"]
features = ["full"]