[package]
name = "pprtmp"
version = "0.1.0"
edition = "2021"
description = "A pull push RTMP app"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
log = "0.4.29"
env_logger = "0.11.9"
clap = "4.5.60"

streamhub = { path = "../../library/streamhub/" }
rtmp = { path = "../../protocol/rtmp/" }


[dependencies.tokio]
version = "1.49.0"
default-features = false
#features = ["rt-core", "rt-threaded", "macros", "time","sync"]
features = ["full"]
