[package]
name = "xiu"
description = "A powerful live server by Rust ."
version = "0.0.5"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "hls", "httpflv", "video", "streaming"]
edition = "2018"
[dependencies]
toml = "0.5.8"
serde_derive = "1.0"
serde = { version = "1.0.101", optional = true, features = ["derive"] }
anyhow = "^1.0"
log = "0.4.0"
env_logger = "0.9.0"
flexi_logger = "0.18"
chrono = "0.4"
failure = "0.1.1"

rtmp = "0.0.9"#{path = "../../protocol/rtmp/"}#"0.0.4"
httpflv = "0.0.4"#{path = "../../protocol/httpflv/"}
hls = "0.0.5"#{path = "../../protocol/hls/"}

# rtmp = {path = "../../protocol/rtmp/"}#"0.0.4"
# httpflv = {path = "../../protocol/httpflv/"}
# hls = {path = "../../protocol/hls/"}

[features]
default = ["std"]
std = [ "serde" ]

[dependencies.tokio]
version = "1.4.0"
default-features = false
#features = ["rt-core", "rt-threaded", "macros", "time","sync"]
features = ["full"]