[package]
name = "xiu"
description = "A powerful live server by Rust ."
version = "0.4.0"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "hls", "httpflv", "video", "streaming"]
edition = "2018"
[dependencies]
toml = "0.5.8"
serde_derive = "1.0"
serde = { version = "1.0.101", optional = true, features = ["derive"] }
anyhow = "^1.0"
log = "0.4.0"
failure = "0.1.1"
clap = "4.1.4"
libc = "0.2.139"

# rtmp = "0.1.0"    #{path = "../../protocol/rtmp/"}#"0.0.4"
# httpflv = "0.1.1" #{path = "../../protocol/httpflv/"}
# hls = "0.1.1"     #{path = "../../protocol/hls/"}
# env_logger_extend = "0.1.0"
rtmp = { path = "../../protocol/rtmp/" }               #"0.0.4"
httpflv = { path = "../../protocol/httpflv/" }
hls = { path = "../../protocol/hls/" }
env_logger_extend = { path = "../../library/logger/" }


[features]
default = ["std"]
std = ["serde"]

[dependencies.tokio]
version = "1.4.0"
default-features = false
#features = ["rt-core", "rt-threaded", "macros", "time","sync"]
features = ["full"]
