[package]
name = "xiu"
description = "A powerful live server by Rust ."
version = "0.9.0"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "hls", "httpflv", "video", "streaming"]
edition = "2018"
[dependencies]
serde = { version = "1.0.228", optional = true, features = ["derive"] }
anyhow = "^1.0"
log = "0.4.29"
clap = "4.5.60"
libc = "0.2.182"
serde_json = { version = "1", default-features = false, features = [
    "alloc",
    "raw_value",
    "std",
] }
axum = "0.8.8"
tokio-metrics = { version = "0.4.9", default-features = false }

env_logger_extend = { path = "../../library/logger/" }
streamhub = { path = "../../library/streamhub/" }
commonlib = { path = "../../library/common/" }
config = { path = "../../library/config/" }
rtmp = { path = "../../protocol/rtmp/" }
xrtsp = { path = "../../protocol/rtsp/" }
xwebrtc = { path = "../../protocol/webrtc/" }
httpflv = { path = "../../protocol/httpflv/" }
hls = { path = "../../protocol/hls/" }

[features]
default = ["std"]
std = ["serde"]

[dependencies.tokio]
version = "1.49.0"
default-features = false
#features = ["rt-core", "rt-threaded", "macros", "time","sync"]
features = ["full"]
