[package]
name = "flv"
description = "flv parser."
version = "0.0.1"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["flv"]
keywords = ["rtmp", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.0"
rand = "0.3"
failure = "0.1.1"
hmac = "0.6.2"
sha2 = "0.7.1"
netio = {path = "../../library/netio/"}
tokio-util = { version = "0.6.5", features = ["codec"] }

# [dependencies.tokio]
# version = "0.2.21"
# default-features = false
# features = ["rt-core", "stream", "sync", "time", "tcp"]

[dependencies.tokio]
version = "1.4.0"
default-features = false
#features = ["rt-core", "rt-threaded", "macros", "time","sync"]
features = ["full"]