[package]
name = "gb28181"
version = "0.1.0"
description = "gb28181 library."
edition = "2021"
authors = ["HarlanC <wawacry@qq.com>"]
license = "MIT"
repository = "https://github.com/harlanc/xiu"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["gb28181", "video", "streaming"]
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
byteorder = "1.4.2"
tokio = "1.4.0"
bytes = "1.0.0"
log = "0.4"
failure = "0.1.1"
http = "0.2.9"
indexmap = "1.9.3"
lazy_static = "1.4.0"
chrono = "0.4"
async-trait = "0.1.70"
base64 = "0.21.2"
hex = "0.4.3"

# bytesio = { path = "../../library/bytesio/" }
# streamhub = { path = "../../library/streamhub/" }

bytesio = "0.3.0"
streamhub = "0.1.2"
