[package]
name = "hls"
description = "hls library."
version = "0.0.5"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["hls", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.0"
failure = "0.1.1"
log = "0.4"
uuid = { version = "0.6.5", features = ["v4"] }

xflv = "0.0.2"#{path = "../../library/container/flv/"}
rtmp = "0.0.9"#{path = "../rtmp/"}#"0.0.4"
# xflv = {path = "../../library/container/flv/"}
# rtmp = {path = "../rtmp/"}#"0.0.4"
xmpegts = "0.0.3"#{path = "../../library/container/mpegts/"}


hyper = { version = "0.14", features = ["full"] }
tokio-util = { version = "0.6.5", features = ["codec"] }

[dependencies.tokio]
version = "1.4.0"
default-features = false
features = ["full"]