[package]
name = "hls"
description = "hls library."
version = "0.4.1"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["hls", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.0"
failure = "0.1.1"
log = "0.4"
axum = { version = "0.7.4" }
tokio-util = { version = "0.6.5", features = ["codec"] }

streamhub = { path = "../../library/streamhub/" }
commonlib = { path = "../../library/common/" }
xmpegts = { path = "../../library/container/mpegts/" }
xflv = { path = "../../library/container/flv/" }
rtmp = { path = "../rtmp/" }

[dependencies.tokio]
version = "1.4.0"
default-features = false
features = ["full"]
