[package]
name = "hls"
description = "hls library."
version = "0.4.1"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["hls", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.5.0"
bytes = "1.11.1"
failure = "0.1.8"
log = "0.4"
axum = { version = "0.8.8" }
tokio-util = { version = "0.7.18", features = ["codec"] }

streamhub = { path = "../../library/streamhub/" }
xmpegts = { path = "../../library/container/mpegts/" }
xflv = { path = "../../library/container/flv/" }
commonlib = { path = "../../library/common/" }
config = { path = "../../library/config/" }

[dependencies.tokio]
version = "1.49.0"
default-features = false
features = ["full"]
