[package]
name = "httpflv"
description = "httpflv library."
version = "0.2.1"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["httpflv", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.0"
failure = "0.1.1"
log = "0.4"
hyper = { version = "0.14", features = ["full"] }
futures = "0.3"


#xflv = "0.2.1"
# rtmp = "0.3.1"
xflv = { path = "../../library/container/flv/" }
rtmp = { path = "../rtmp/" }                      #"0.0.4"
streamhub = { path = "../../library/streamhub/" }


[dependencies.tokio]
version = "1.4.0"
default-features = false
features = ["full"]
