[package]
name = "httpflv"
description = "httpflv library."
version = "0.3.1"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["httpflv", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.5.0"
bytes = "1.11.1"
failure = "0.1.8"
log = "0.4"
axum = { version = "0.8.8" }
futures = "0.3"
chrono = "0.4"

streamhub = { path = "../../library/streamhub/" }
xflv = { path = "../../library/container/flv/" }
commonlib = { path = "../../library/common/" }

[dependencies.tokio]
version = "1.49.0"
default-features = false
features = ["full"]
