[package]
name = "rtmp"
description = "rtmp library."
version = "0.1.0"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.0"
rand = "0.3"
failure = "0.1.1"
hmac = "0.11.0"
sha2 = "0.9"
uuid = { version = "0.6.5", features = ["v4"] }
tokio-util = { version = "0.6.5", features = ["codec"] }
log = "0.4"
chrono = "0.4"

bytesio = "0.1.27"
xflv = "0.1.0"
#bytesio = {path = "../../library/bytesio/"}
#xflv = { path = "../../library/container/flv/" }

[dependencies.tokio]
version = "1.4.0"
default-features = false
features = ["full"]
