[package]
name = "rtmp"
description = "rtmp library."
version = "0.4.1"
authors = ["HarlanC <wawacry@qq.com"]
repository = "https://github.com/harlanc/xiu"
license = "MIT"
readme = "README.md"
categories = ["multimedia", "multimedia::video", 'multimedia::audio']
keywords = ["rtmp", "video", "streaming"]
edition = "2018"

[dependencies]
byteorder = "1.5.0"
bytes = "1.11.1"
rand = "0.10"
failure = "0.1.8"
hmac = "0.12.1"
sha2 = "0.10"
# uuid = { version = "0.6.5", features = ["v4"] }
log = "0.4"
chrono = "0.4"
indexmap = "2.13.0"
async-trait = "0.1.89"
hex = "0.4"
serde_json = { version = "1", default-features = false, features = [
    "alloc",
    "raw_value",
    "std",
] }
serde = { version = "1.0", features = ["derive", "rc"] }

bytesio = { path = "../../library/bytesio/" }
streamhub = { path = "../../library/streamhub/" }
h264-decoder = { path = "../../library/codec/h264/" }
xflv = { path = "../../library/container/flv/" }
commonlib = { path = "../../library/common/" }

[dependencies.tokio]
version = "1.49.0"
default-features = false
features = ["full"]
