[package]
name = "xrtsp"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.10"
byteorder = "1.5.0"
tokio = "1.49.0"
bytes = "1.11.1"
log = "0.4"
failure = "0.1.8"
http = "1.4.0"
indexmap = "2.13.0"
lazy_static = "1.5.0"
chrono = "0.4"
async-trait = "0.1.89"
base64 = "0.22.1"
hex = "0.4.3"
serde_json = { version = "1", default-features = false, features = [
    "alloc",
    "raw_value",
    "std",
] }

bytesio = { path = "../../library/bytesio/" }
streamhub = { path = "../../library/streamhub/" }
commonlib = { path = "../../library/common/" }
