[package]
name = "xwebrtc"
version = "0.1.0"
description = "A whip/whep library."
edition = "2021"
authors = ["HarlanC <wawacry@qq.com>"]
license = "MIT"
repository = "https://github.com/harlanc/xiu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.3"
http = "0.2.9"
byteorder = "1.4.2"
bytes = "1.0.0"
tokio = "1.4.0"
failure = "0.1.1"
log = "0.4"
webrtc = "0.10.1"
async-trait = "0.1.70"
fdk-aac = "0.6.0"
audiopus = "0.3.0-rc.0"

bytesio = { path = "../../library/bytesio/" }
streamhub = { path = "../../library/streamhub/" }
xflv = { path = "../../library/container/flv/" }
commonlib = { path = "../../library/common/" }
