[package]
name = "xwebrtc"
version = "0.1.0"
description = "A whip/whep library."
edition = "2021"
authors = ["HarlanC <wawacry@qq.com>"]
license = "MIT"
repository = "https://github.com/harlanc/xiu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.13.0"
http = "1.4.0"
byteorder = "1.5.0"
bytes = "1.11.1"
tokio = "1.49.0"
failure = "0.1.8"
log = "0.4"
webrtc = "0.17.1"
async-trait = "0.1.89"
fdk-aac = "0.8.0"
audiopus = "0.3.0-rc.0"

bytesio = { path = "../../library/bytesio/" }
streamhub = { path = "../../library/streamhub/" }
xflv = { path = "../../library/container/flv/" }
commonlib = { path = "../../library/common/" }
